<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".question2">

    <TextView
            android:text="Love is our true essence. This love does not have any limitations of caste, creed, colour or religion. We are all beads strung on the same thread of love. Awaken that unity and spread the message of love and service."
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:fontFamily="@font/tektonpro_regular"
            android:textColor="@color/black"
            android:lineSpacingExtra="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:layout_marginTop="132dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"/>
    <LinearLayout android:orientation="vertical" android:layout_width="297dp" android:layout_height="334dp"
                  android:id="@+id/linearLayout2"
                  app:layout_constraintStart_toStartOf="parent"
                  android:layout_marginStart="56dp" android:layout_marginTop="32dp"
                  app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
                  android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0">
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/longoption" android:fontFamily="@font/tektonpro_regular"/>
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/option2" android:fontFamily="@font/tektonpro_regular"/>
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/option3" android:fontFamily="@font/tektonpro_regular"/>
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/option4" android:fontFamily="@font/tektonpro_regular"/>
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/option5" android:fontFamily="@font/tektonpro_regular"/>
    </LinearLayout>
    <TextView
            android:text="Question 2"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:id="@+id/questiontitle" android:layout_marginTop="84dp"
            android:fontFamily="@font/tektonpro_bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="56dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" app:layout_constraintVertical_bias="0.0"
            android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>