<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".profile">
    <include android:id="@+id/toolbar"
             layout="@layout/toolbar" />
    <Button
            android:text="@string/done"
            android:layout_width="412dp"
            android:layout_height="65dp"
            android:id="@+id/btn_editdone"
            android:textColor="#ffffff"
            tools:autoText="false"
            android:background="#F54686"
            android:textSize="24dp"
            android:bottomRightRadius="20pt"
            android:bottomLeftRadius="20pt"
            android:fontFamily="@font/tektonpro_bold"
            android:topLeftRadius="20pt"
            android:topRightRadius="20pt"
            android:layout_marginTop="48dp"
            app:layout_constrainedHeight="true"
            app:layout_constrainedWidth="true"
            android:baselineAligned="false" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    <TextView
            android:layout_width="258dp"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/tektonpro_regular"
            android:ems="10"
            android:id="@+id/birthdate"
            android:textSize="18dp"
            android:background="@drawable/textline_thickness2"
            android:hint="@string/birthdate"
            android:importantForAutofill="no"
            android:paddingBottom="0dp" android:gravity="center_vertical"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password_toggle"
    />
    <EditText
            android:layout_width="258dp"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/tektonpro_regular"
            android:ems="10"
            android:id="@+id/location"
            android:textSize="18dp"
            android:background="@drawable/textline_thickness2"
            android:hint="@string/location"
            android:importantForAutofill="no"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/birthdate"/>
    <EditText
            android:layout_width="258dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/tektonpro_regular"
            android:ems="10"
            android:id="@+id/firstname"
            android:textSize="18dp"
            android:background="@drawable/textline_thickness2"
            android:hint="@string/firstname"
            android:importantForAutofill="no"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="96dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <EditText
            android:layout_width="258dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:fontFamily="@font/tektonpro_regular"
            android:ems="10"
            android:id="@+id/secondname"
            android:textSize="18dp"
            android:background="@drawable/textline_thickness2"
            android:hint="@string/secondname"
            android:importantForAutofill="no"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/firstname"/>
    <EditText
            android:layout_width="258dp"
            android:layout_height="50dp"
            android:inputType="phone"
            android:fontFamily="@font/tektonpro_regular"
            android:ems="10"
            android:id="@+id/telnumber"
            android:textSize="18dp"
            android:background="@drawable/textline_thickness2"
            android:hint="@string/telcountrycode"
            android:importantForAutofill="no"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/secondname"/>
    <EditText
            android:layout_width="258dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:fontFamily="@font/tektonpro_regular"
            android:ems="10"
            android:id="@+id/text_input_password_toggle"
            android:textSize="18dp"
            android:background="@drawable/textline_thickness2"
            android:hint="@string/passwordhint"
            android:importantForAutofill="no"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/telnumber"/>
    <EditText
            android:layout_width="258dp"
            android:layout_height="50dp"
            android:inputType="textCapCharacters"
            android:fontFamily="@font/tektonpro_regular"
            android:ems="10"
            android:id="@+id/nationalid"
            android:textSize="18dp"
            android:background="@drawable/textline_thickness2"
            android:hint="@string/nationalid"
            android:importantForAutofill="no"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_input_password_toggle"/>
    <TextView
            android:text="@string/editPersonalDetails"
            android:fontFamily="@font/tektonpro_bold"
            android:textSize="24dp"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="76dp" android:layout_marginTop="104dp"
            app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>