<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".MainActivity">

    <ImageView
            android:layout_width="484dp"
            android:layout_height="332dp"
            android:src="@drawable/oie_transparent"
            android:id="@+id/imageView"
            android:contentDescription="@string/share"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <EditText
            android:layout_width="258dp"
            android:layout_height="44dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/passwordhint"
            android:textSize="18dp"
            android:background="@drawable/textline_thickness2"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:importantForAutofill="no"
            app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/telnumber"/>
    <EditText
            android:layout_width="258dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/telnumber"
            android:textSize="18dp"
            android:background="@drawable/textline_thickness2"
            android:hint="@string/telcountrycode" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:importantForAutofill="no" app:layout_constraintHorizontal_bias="0.496"/>
    <Button
            android:text="@string/login"
            android:layout_width="163dp"
            android:layout_height="59dp"
            android:id="@+id/btn_login"
            android:textColor="#F5464B"
            tools:autoText="false"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_customized"
            android:textSize="24dp"
            android:bottomRightRadius="20pt"
            android:bottomLeftRadius="20pt"
            android:fontFamily="@font/tektonpro_bold"
            android:topLeftRadius="20pt"
            android:topRightRadius="20pt"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintVertical_bias="0.35"/>
    <TextView
            android:text="Don't have an account? Sign up."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>